--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bahuang_utils",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "dist/bahuang-utils.js",
   "module": "./src/index.js",
@@ -16,14 +16,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.8",
     "babel-loader": "^8.2.2",
-    "babel-preset-es2015": "^6.24.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.14.8",
     "js-cookie": "^2.2.1",
     "xss": "^1.0.9"
   }
